# MSALT

./: .gitignore  LICENSE  README.md  debug_config.py  main.py  msalt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Docker/: Dockerfile  run_docker.sh
benchmarking/: benchmark_nuscenes.py  benchmark_semantic_kitti.py  geometry.py  metrics.py
benchmarking/evaluators/: base_evaluator.py  nuscenes_evaluator.py  semantic_kitti_evaluator.py
config/: benchmark.yaml  benchmark_nuscenes.yaml  benchmark_semantic_kitti.yaml  config.yaml
config/models/: default.yaml
config/msalt_setup/: docker_setup.yaml  husky_setup.yaml  nuscenes.yaml  semantic_kitti.yaml
config/salt_setup/: husky_setup.yaml  semantic_kitty.yaml
docs/: book.toml
docs/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-94a30155.js  toc-73410a52.js  toc.html
docs/src/: README.md  SUMMARY.md
examples/: camera1_extrinsics.txt  camera3_extrinsics.txt  camera3_intrinsics.txt  camera5_distortion.txt
examples/data/: camera1_distortion.txt  camera1_intrinsics.txt  camera2_distortion.txt  camera2_extrinsics.txt  camera2_intrinsics.txt  camera3_distortion.txt  camera4_distortion.txt  camera4_extrinsics.txt  camera4_intrinsics.txt  camera5_extrinsics.txt  camera5_intrinsics.txt
src/core/: annotation_manager.py  commands.py  geometry.py  model_tracker.py  objects.py  ontology.py  segmentation.py  tracker.py
src/data/: data_controller.py  interfaces.py  structures.py
test/: test_annotation_manager.py  test_commands.py  test_geometry.py  test_ui_components.py
(+72 files in other folders)
