[project]
name = "salt-annotator"
version = "0.1.0"
description = "SALT: Segment, Annotate, Label, Track - A Sensor Fusion Annotation Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "pyqtgraph>=0.13.3",
    "PyOpenGL>=3.1.6",
    "PyOpenGL-accelerate>=3.1.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "open3d>=0.17.0",
    "opencv-python>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# This tells uv to manage the environment for us
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]